refactored backend to implement java 25 features